--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test:chrome:dev": " playwright test --project=chromium --headed",
+    "test:chrome": " playwright test --project=chromium"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
